# ma-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run-unsafe-drop-ts.sh  setup.sh  test.sh
.devcontainer/: devcontainer.dockerfile  devcontainer.json
analysis-configs/: alloc-taint.json  simple.json  string-dealloc.json  uninit-drop.json
analysis-targets/: CMakeLists.txt
analysis-targets/c-tests/: CMakeLists.txt  declare_only.c
analysis-targets/cves/: CMakeLists.txt
analysis-targets/cves/cve-2018-20991/: Cargo.toml  rust-toolchain.toml
analysis-targets/cves/cve-2018-20991/src/: main.rs
analysis-targets/cves/cve-2018-20996/: Cargo.toml
analysis-targets/cves/cve-2018-20996/src/: main.rs
analysis-targets/cves/cve-2018-20997/: Cargo.toml
analysis-targets/cves/cve-2019-16140/: Cargo.toml
analysis-targets/cves/cve-2019-16140/.cargo/: config.toml
analysis-targets/cves/cve-2019-16140/src/: main.rs
analysis-targets/cves/cve-2019-16880/: Cargo.toml  rust-toolchain.toml
analysis-targets/cves/cve-2019-16880/src/: main.rs
analysis-targets/cves/cve-2020-35891/: Cargo.toml
analysis-targets/cves/cve-2020-35891/src/: main.rs
analysis-targets/cves/rustsec-2021-0052/: Cargo.toml
analysis-targets/cves/rustsec-2021-0052/.cargo/: config.toml
analysis-targets/cves/rustsec-2021-0052/src/: main.rs
analysis-targets/cves/rustsec-2022-0012/: Cargo.toml
analysis-targets/cves/rustsec-2022-0012/src/: main.rs
analysis-targets/cves/rustsec-2022-0078/: Cargo.toml
analysis-targets/cves/rustsec-2022-0078/src/: main.rs
analysis-targets/cves/sd-2023-stretch-01/: CMakeLists.txt  Cargo.toml
analysis-targets/simplified-cves/: Cargo.toml
analysis-targets/simplified-cves/src/: cve-2019-16140.rs  cve-2019-16880.rs  cve-2020-35891.rs
analysis-targets/unsafe-tests/: CMakeLists.txt  Cargo.toml  rust-toolchain.toml
analysis-targets/unsafe-tests/.cargo/: config.toml
analysis-targets/unsafe-tests/src/: drop-alias-01.rs  drop-alias-02.rs  drop-alias-03.rs  drop-alias-04.rs  drop-alias-05.rs  drop-uninit-01.rs  drop-uninit-02.rs  simple-taint-01.rs  struct-01.rs  struct-ref-01.rs  struct-ref-02.rs  struct-ref-03.rs  uaf-slice-01.rs  uaf-slice-02.rs  uaf-vec-01.rs  uaf-vec-02.rs  unsafe-01.rs  unsafe-02.rs  unsafe-03.rs  unsafe-ffi-01.rs
experiments/: build-experiments.sh  cargo-config.toml  clean-experiments.sh  crates.txt  docker-build.sh  download-crate.sh  experiments.dockerfile  prepare-experiments.sh  run-experiments.sh  top50crates.txt
find_unsafe_rs/: Cargo.toml  cbindgen.toml
find_unsafe_rs/include/: find_unsafe_rs.h
find_unsafe_rs/src/: ffi-test.c  lib.rs  test.rs
find_unsafe_rs/test/: unsafe-03.rs  unsafe-04.rs  unsafe-05.rs
lib/: CMakeLists.txt
lib/find_unsafe_rs/: CMakeLists.txt
lib/find_unsafe_rs/src/: ffi.rs  main.rs
lib/find_unsafe_rs/test/: unsafe-01.rs  unsafe-02.rs
rustc_demangle/: CMakeLists.txt
tools/: CMakeLists.txt
tools/unsafe-drop-analysis/: CMakeLists.txt  unsafe-drop-analysis.cpp
tools/unsafe-drop-ts/: CMakeLists.txt  UnsafeDropStateDescription.cpp  UnsafeDropStateDescription.h  unsafe-drop-ts.cpp
tools/unsafe-taint-check/: CMakeLists.txt  unsafe-taint-check-v2.cpp  unsafe-taint-check.cpp
