[package]
name = "simplified-cves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simplified-cve-2019-16140"
path = "src/cve-2019-16140.rs"

[[bin]]
name = "simplified-cve-2019-16880"
path = "src/cve-2019-16880.rs"

[[bin]]
name = "simplified-cve-2020-35891"
path = "src/cve-2020-35891.rs"

[dependencies]
typenum = "=1.10.0"
generic-array = "=0.12.0"
idem = "=0.4.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false


