[package]
name = "unsafe-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "unsafe-tests_unsafe-01"
path = "src/unsafe-01.rs"

[[bin]]
name = "unsafe-tests_unsafe-02"
path = "src/unsafe-02.rs"

[dependencies]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false


