[package]
name = "unsafe-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "unsafe-tests_unsafe-01"
path = "src/unsafe-01.rs"

[[bin]]
name = "unsafe-tests_unsafe-02"
path = "src/unsafe-02.rs"

[[bin]]
name = "unsafe-tests_unsafe-03"
path = "src/unsafe-03.rs"

[[bin]]
name = "unsafe-tests_drop-alias-01"
path = "src/drop-alias-01.rs"

[[bin]]
name = "unsafe-tests_drop-alias-02"
path = "src/drop-alias-02.rs"

[[bin]]
name = "unsafe-tests_drop-alias-03"
path = "src/drop-alias-03.rs"

[[bin]]
name = "unsafe-tests_drop-alias-04"
path = "src/drop-alias-04.rs"

[[bin]]
name = "unsafe-tests_drop-alias-05"
path = "src/drop-alias-05.rs"

[[bin]]
name = "unsafe-tests_drop-uninit-01"
path = "src/drop-uninit-01.rs"

[[bin]]
name = "unsafe-tests_struct-ref-01"
path = "src/struct-ref-01.rs"

[[bin]]
name = "unsafe-tests_struct-ref-02"
path = "src/struct-ref-02.rs"

[[bin]]
name = "unsafe-tests_struct-ref-03"
path = "src/struct-ref-03.rs"

[[bin]]
name = "unsafe-tests_simple-taint-01"
path = "src/simple-taint-01.rs"

[[bin]]
name = "unsafe-tests_struct-01"
path = "src/struct-01.rs"

[[bin]]
name = "unsafe-tests_uaf-slice-01"
path = "src/uaf-slice-01.rs"

[[bin]]
name = "unsafe-tests_drop-uninit-02"
path = "src/drop-uninit-02.rs"


[dependencies]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false


